Cleaning files. English code. Trying to repair delete at the end

--- a/cpp/linked_list/.vscode/settings.json
+++ b/cpp/linked_list/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "iostream": "cpp",
         "string_view": "cpp"
-    }
+    },
+    "terminal.integrated.fontSize": 13
 }
