--- a/.gitignore
+++ b/.gitignore
@@ -183,7 +183,7 @@ Cargo.lock
 **/*.rs.bk
 
 ### VisualStudioCode ###
-.vscode/*
+*/.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
